--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "start:dev": "ts-node-dev src/index.ts",
-    "start:prod": "node dist/index.ts",
+    "start:dev": "cross-env NODE_ENV=development ts-node-dev src/index.ts",
+    "start:debug": "cross-env NODE_ENV=debug ts-node-dev src/index.ts",
+    "start:prod": "cross-env NODE_ENV=production node dist/index.js",
     "build": "tsc",
     "watch": "tsc -w"
   },
@@ -17,6 +18,7 @@
     "@types/glob": "^8.0.0",
     "@types/node": "^18.11.18",
     "@types/uuid": "^9.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.31.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
