--- a/package.json
+++ b/package.json
@@ -15,23 +15,23 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/glob": "^8.0.0",
-    "@types/node": "^18.11.18",
-    "@types/uuid": "^9.0.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.31.0",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.4"
+    "@types/glob": "8.0.0",
+    "@types/node": "18.11.18",
+    "@types/uuid": "9.0.0",
+    "cross-env": "7.0.3",
+    "eslint": "8.31.0",
+    "ts-node": "10.9.1",
+    "ts-node-dev": "2.0.0",
+    "typescript": "4.9.4"
   },
   "dependencies": {
     "@types/mongoose": "^5.11.97",
-    "discord.js": "^14.7.1",
-    "dotenv": "^16.0.3",
-    "glob": "^7.2.0",
-    "moment": "^2.29.4",
-    "mongoose": "^6.8.3",
-    "nodemon": "^2.0.20",
-    "uuid": "^9.0.0"
+    "discord.js": "14.8.0",
+    "dotenv": "16.0.3",
+    "glob": "7.2.0",
+    "moment": "2.29.4",
+    "mongoose": "6.8.3",
+    "nodemon": "2.0.20",
+    "uuid": "9.0.0"
   }
 }
