--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/glob": "8.0.0",
+    "@types/luxon": "3.3.0",
     "@types/node": "18.11.18",
     "@types/uuid": "9.0.0",
     "cross-env": "7.0.3",
@@ -25,11 +26,11 @@
     "typescript": "4.9.4"
   },
   "dependencies": {
-    "@types/mongoose": "^5.11.97",
+    "@types/mongoose": "5.11.97",
     "discord.js": "14.8.0",
     "dotenv": "16.0.3",
     "glob": "7.2.0",
-    "moment": "2.29.4",
+    "luxon": "3.3.0",
     "mongoose": "6.8.3",
     "nodemon": "2.0.20",
     "uuid": "9.0.0"
