--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "4.9.4"
   },
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.40",
     "@types/mongoose": "5.11.97",
     "discord.js": "14.8.0",
     "dotenv": "16.0.3",
@@ -33,6 +34,7 @@
     "luxon": "3.3.0",
     "mongoose": "6.8.3",
     "nodemon": "2.0.20",
+    "undici": "^5.22.1",
     "uuid": "9.0.0"
   }
 }
