--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "importHelpers": true
   },
   "include": ["src", "enviroment.d.ts"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "exclude": ["node_modules", "**/*.spec.ts", "dist"]
 }
